js/js.translator/testData/incremental/invalidation/companionWithStdLibCall/main/f.0.kt
fun test(x: Int): Int {
    konst y = MyClass1.companionMethod(x)
    return y.countTrailingZeroBits()
}

